--- a/html/templates/SuccessfulUpload.html
+++ b/html/templates/SuccessfulUpload.html
@@ -2,12 +2,12 @@
 {% block title %}Upload Successful{% endblock%}
 
 {% block content %}
-
+<script src="/static/lib/js/jquery.min.js"></script>
 <div class="loader-wrapper">
     <span class="loader"><span class="loader-inner"></span></span>
   </div>
   <script>
-    jQuery(document).ready(function($){
+    $(document).ready(function($){
       $(".loader-wrapper").fadeOut(1500);
     });
 </script> 
@@ -34,5 +34,4 @@
 </style>
 <script src="/static/js/scatterPlot.js"></script>
 </div>
-
 {% endblock %}
