Cursed Auto-generated Scatterplots

--- a/html/templates/SuccessfulUpload.html
+++ b/html/templates/SuccessfulUpload.html
@@ -33,6 +33,7 @@
     }
 </style>
 <script src="/static/js/scatterPlot.js"></script>
+<img src="{{url_for('static', filename='scatter.png')}}" alt="ScatterPlot" style="border: 5px solid black">
 </div>
 
 {% endblock %}
